// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactList should render correctly 1`] = `
.emotion-0 {
  background-color: #f0f8f1;
  padding: 10px;
  border-radius: 15px;
  margin-bottom: 10px;
}

.emotion-1 {
  font-size: 1.5rem;
  font-weight: 700;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 10px;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 700;
  color: grey;
  margin: 0;
  text-align: center;
}

.emotion-6 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 10px 0%;
  margin-bottom: 10px;
}

@media (min-width: 768px) {
  .emotion-6 {
    gap: 10px 10%;
  }
}

@media (min-width: 992px) {
  .emotion-6 {
    gap: 10px 5%;
  }
}

.emotion-7 {
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  border: 1px solid #ccc;
  border-top: 1px solid #ccc;
  border-radius: 15px;
  padding: 10px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: white;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
  cursor: pointer;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
}

@media (min-width: 768px) {
  .emotion-7 {
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media (min-width: 992px) {
  .emotion-7 {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-9 {
  -webkit-flex: 0 0 90%;
  -ms-flex: 0 0 90%;
  flex: 0 0 90%;
}

.emotion-10 {
  color: green;
}

.emotion-12 {
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 10%;
  -ms-flex: 0 0 10%;
  flex: 0 0 10%;
}

.emotion-13 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  width: 100%;
  height: 0;
  visibility: hidden;
  border-top: 1px solid #ccc;
  padding-top: 0;
  margin-top: 0;
  -webkit-transition: height 0.2s linear,padding 0.2s linear,margin 0.2s linear,visibility 0.1s linear;
  transition: height 0.2s linear,padding 0.2s linear,margin 0.2s linear,visibility 0.1s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-21 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  gap: 10px;
  margin-bottom: 10px;
}

.emotion-21 li {
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #ccc;
  border-radius: 10px;
  cursor: pointer;
}

.emotion-21 li.disabled a {
  color: #ccc;
}

.emotion-21 li a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
}

.emotion-21 li.selected {
  background-color: #06ba63;
  font-weight: 500;
  color: white;
}

.emotion-21 li.previous,
.emotion-21 li.next {
  border: none;
  font-weight: 500;
  background-color: transparent;
}

<div>
  <div>
    <div
      class="emotion-0"
    >
      <h2
        class="emotion-1"
      >
        Favorite
      </h2>
      <div
        class="emotion-2"
      >
        <img
          alt="Empty Data"
          src="empty-data-vector.png"
        />
        <h5
          class="emotion-3"
        >
          You don't have a favorite buddies!🌟
        </h5>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <h2
        class="emotion-1"
      >
        Regular
      </h2>
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div>
                <b>
                  John
                   
                  Doe
                </b>
              </div>
              <div>
                <span>
                  Phone 
                  1
                  :
                   
                  <a
                    class="emotion-10"
                    href="https://wa.me/628912345678"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628912345678
                  </a>
                  <br />
                </span>
                <span>
                  Phone 
                  2
                  :
                   
                  <a
                    class="emotion-10"
                    href="https://wa.me/628987654321"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628987654321
                  </a>
                  <br />
                </span>
              </div>
            </div>
            <div
              class="emotion-12"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-star "
                color="lightgrey"
                data-icon="star"
                data-prefix="far"
                data-testid="favorite-star"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.6 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-info "
              color="grey"
              data-icon="circle-info"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash "
              color="grey"
              data-icon="trash"
              data-prefix="fas"
              data-testid="delete-contact-button"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div>
                <b>
                  Jane
                   
                  Doe
                </b>
              </div>
              <div>
                <span>
                  Phone 
                  1
                  :
                   
                  <a
                    class="emotion-10"
                    href="https://wa.me/628912398789"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628912398789
                  </a>
                  <br />
                </span>
                <span>
                  Phone 
                  2
                  :
                   
                  <a
                    class="emotion-10"
                    href="https://wa.me/628987654321"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628987654321
                  </a>
                  <br />
                </span>
              </div>
            </div>
            <div
              class="emotion-12"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-star "
                color="lightgrey"
                data-icon="star"
                data-prefix="far"
                data-testid="favorite-star"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.6 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-info "
              color="grey"
              data-icon="circle-info"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash "
              color="grey"
              data-icon="trash"
              data-prefix="fas"
              data-testid="delete-contact-button"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        aria-label="Pagination"
        class="emotion-21"
        role="navigation"
      >
        <li
          class="previous disabled"
        >
          <a
            aria-disabled="true"
            aria-label="Previous page"
            class=" "
            rel="prev"
            role="button"
            tabindex="-1"
          >
            &lt;
          </a>
        </li>
        <li
          class="selected"
        >
          <a
            aria-current="page"
            aria-label="Page 1 is your current page"
            rel="canonical"
            role="button"
            tabindex="-1"
          >
            1
          </a>
        </li>
        <li
          class="next disabled"
        >
          <a
            aria-disabled="true"
            aria-label="Next page"
            class=" "
            rel="next"
            role="button"
            tabindex="-1"
          >
            &gt;
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ContactList should render correctly with error 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 10px;
  width: 100%;
}

.emotion-1 {
  width: 50vw;
  max-width: 250px;
}

.emotion-2 {
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0;
  font-style: italic;
  text-align: center;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  margin: 0;
  text-align: center;
}

.emotion-4 {
  color: #06ba63;
}

<div>
  <div
    class="emotion-0"
  >
    <img
      alt="Error"
      class="emotion-1"
      src="error-vector.png"
    />
    <h2
      class="emotion-2"
    >
      Oops! Something went wrong.
    </h2>
    <p
      class="emotion-3"
    >
      Please
       
      <a
        class="emotion-4"
        href="/"
      >
        refresh
      </a>
       
      this page or try again later
    </p>
    <button
      class="btn btn-primary"
      type="button"
    >
      Back to Home
    </button>
  </div>
</div>
`;

exports[`ContactList should render correctly with favorite contact 1`] = `
.emotion-0 {
  background-color: #f0f8f1;
  padding: 10px;
  border-radius: 15px;
  margin-bottom: 10px;
}

.emotion-1 {
  font-size: 1.5rem;
  font-weight: 700;
}

.emotion-2 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 10px 0%;
  margin-bottom: 10px;
}

@media (min-width: 768px) {
  .emotion-2 {
    gap: 10px 10%;
  }
}

@media (min-width: 992px) {
  .emotion-2 {
    gap: 10px 5%;
  }
}

.emotion-3 {
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  border: 1px solid #ccc;
  border-top: 5px solid #06ba63;
  border-radius: 15px;
  padding: 10px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: white;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
  cursor: pointer;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
}

@media (min-width: 768px) {
  .emotion-3 {
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media (min-width: 992px) {
  .emotion-3 {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-5 {
  -webkit-flex: 0 0 90%;
  -ms-flex: 0 0 90%;
  flex: 0 0 90%;
}

.emotion-6 {
  color: green;
}

.emotion-8 {
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 10%;
  -ms-flex: 0 0 10%;
  flex: 0 0 10%;
}

.emotion-9 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  width: 100%;
  height: 0;
  visibility: hidden;
  border-top: 1px solid #ccc;
  padding-top: 0;
  margin-top: 0;
  -webkit-transition: height 0.2s linear,padding 0.2s linear,margin 0.2s linear,visibility 0.1s linear;
  transition: height 0.2s linear,padding 0.2s linear,margin 0.2s linear,visibility 0.1s linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-13 {
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  border: 1px solid #ccc;
  border-top: 1px solid #ccc;
  border-radius: 15px;
  padding: 10px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: white;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
  cursor: pointer;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.5s linear;
  transition: 0.5s linear;
}

@media (min-width: 768px) {
  .emotion-13 {
    -webkit-flex: 0 0 45%;
    -ms-flex: 0 0 45%;
    flex: 0 0 45%;
  }
}

@media (min-width: 992px) {
  .emotion-13 {
    -webkit-flex: 0 0 30%;
    -ms-flex: 0 0 30%;
    flex: 0 0 30%;
  }
}

.emotion-20 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0;
  gap: 10px;
  margin-bottom: 10px;
}

.emotion-20 li {
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #ccc;
  border-radius: 10px;
  cursor: pointer;
}

.emotion-20 li.disabled a {
  color: #ccc;
}

.emotion-20 li a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: black;
}

.emotion-20 li.selected {
  background-color: #06ba63;
  font-weight: 500;
  color: white;
}

.emotion-20 li.previous,
.emotion-20 li.next {
  border: none;
  font-weight: 500;
  background-color: transparent;
}

<div>
  <div>
    <div
      class="emotion-0"
    >
      <h2
        class="emotion-1"
      >
        Favorite
      </h2>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div>
                <b>
                  John
                   
                  Doe
                </b>
              </div>
              <div>
                <span>
                  Phone 
                  1
                  :
                   
                  <a
                    class="emotion-6"
                    href="https://wa.me/628912345678"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628912345678
                  </a>
                  <br />
                </span>
                <span>
                  Phone 
                  2
                  :
                   
                  <a
                    class="emotion-6"
                    href="https://wa.me/628987654321"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628987654321
                  </a>
                  <br />
                </span>
              </div>
            </div>
            <div
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-star "
                color="orange"
                data-icon="star"
                data-prefix="fas"
                data-testid="favorite-star"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <div
            class="emotion-9"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-info "
              color="grey"
              data-icon="circle-info"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash "
              color="grey"
              data-icon="trash"
              data-prefix="fas"
              data-testid="delete-contact-button"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <h2
        class="emotion-1"
      >
        Regular
      </h2>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-13"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div>
                <b>
                  Jane
                   
                  Doe
                </b>
              </div>
              <div>
                <span>
                  Phone 
                  1
                  :
                   
                  <a
                    class="emotion-6"
                    href="https://wa.me/628912398789"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628912398789
                  </a>
                  <br />
                </span>
                <span>
                  Phone 
                  2
                  :
                   
                  <a
                    class="emotion-6"
                    href="https://wa.me/628987654321"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    628987654321
                  </a>
                  <br />
                </span>
              </div>
            </div>
            <div
              class="emotion-8"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-star "
                color="lightgrey"
                data-icon="star"
                data-prefix="far"
                data-testid="favorite-star"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.6 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <div
            class="emotion-9"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-info "
              color="grey"
              data-icon="circle-info"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-trash "
              color="grey"
              data-icon="trash"
              data-prefix="fas"
              data-testid="delete-contact-button"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <ul
        aria-label="Pagination"
        class="emotion-20"
        role="navigation"
      >
        <li
          class="previous disabled"
        >
          <a
            aria-disabled="true"
            aria-label="Previous page"
            class=" "
            rel="prev"
            role="button"
            tabindex="-1"
          >
            &lt;
          </a>
        </li>
        <li
          class="selected"
        >
          <a
            aria-current="page"
            aria-label="Page 1 is your current page"
            rel="canonical"
            role="button"
            tabindex="-1"
          >
            1
          </a>
        </li>
        <li
          class="next disabled"
        >
          <a
            aria-disabled="true"
            aria-label="Next page"
            class=" "
            rel="next"
            role="button"
            tabindex="-1"
          >
            &gt;
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ContactList should render correctly with loading 1`] = `
@keyframes animation-0 {
  0% {
    background-color: hsl(200, 20%, 80%);
  }

  100% {
    background-color: hsl(200, 20%, 95%);
  }
}

@keyframes animation-0 {
  0% {
    background-color: hsl(200, 20%, 80%);
  }

  100% {
    background-color: hsl(200, 20%, 95%);
  }
}

@keyframes animation-0 {
  0% {
    background-color: hsl(200, 20%, 80%);
  }

  100% {
    background-color: hsl(200, 20%, 95%);
  }
}

.emotion-0 {
  width: 100%;
  border-radius: 15px;
  margin-bottom: 10px;
  -webkit-animation: animation-0 1s linear infinite alternate;
  animation: animation-0 1s linear infinite alternate;
  height: 50px;
}

.emotion-1 {
  width: 100%;
  border-radius: 15px;
  margin-bottom: 10px;
  -webkit-animation: animation-0 1s linear infinite alternate;
  animation: animation-0 1s linear infinite alternate;
  height: 20px;
  width: 80%;
}

.emotion-2 {
  width: 100%;
  border-radius: 15px;
  margin-bottom: 10px;
  -webkit-animation: animation-0 1s linear infinite alternate;
  animation: animation-0 1s linear infinite alternate;
  height: 20px;
  width: 40%;
}

<div>
  <div
    class="emotion-0"
  />
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  />
  <br />
  <div
    class="emotion-0"
  />
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  />
  <br />
  <div
    class="emotion-0"
  />
  <div
    class="emotion-1"
  />
  <div
    class="emotion-2"
  />
</div>
`;
